--- a/apple-pie.html
+++ b/apple-pie.html
@@ -3,7 +3,9 @@
 <meta charset = "UTF-8">
 
 <head>
-<h1>Apple Pie</h1>
+<link rel = "stylesheet" href="apple-pie.css"/>
+<title>Bramley apple pie</title>
+<u><h1>Apple Pie</h1></u>
 <img src = "Apple-Pie.jpg"
 <img width = "600"/> 
 <u><h3>Description</h3></u>
@@ -16,7 +18,7 @@ wine and whip-cream to give it a long-lasting taste.</p>
 </head>
 
 <body>
-    <content> 
+<content> 
 <h3><u>Ingredients</u></h3>
 <p><b>For the filling:</b></p>
 <ul> 1kg of Bramley apples </ul>
