--- a/scones.html
+++ b/scones.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <meta charset = "UTF-8" >
+
 <head>
+    <link rel="stylesheet" href="scones.css"/>
+<title>odin-recipes</title>
 <h1><u>Scones with jam and whip-cream</u></h1>
 <img src = "scones.jpg"
 width = "600">
@@ -59,10 +62,10 @@ for a few minutes to refresh.</li></p>
 
 <br>
 <h3><u>Recipe Tips</u></h3>
-Adding a squeeze of lemon juice to the milk sours it slightly, 
+<div id = "recipe-tips"> Adding a squeeze of lemon juice to the milk sours it slightly, 
 mimicking sharp-tasting buttermilk, often used in scones but sometimes 
 tricky to find. The slightly acidic mix gives a boost to the raising 
-agents in the flour and baking powder. 
+agents in the flour and baking powder.</div> 
 </content>
 
 </body>
